--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
 	"version": "1.0.0",
 	"description": "backend",
 	"type": "module",
-	"main": "index.js",
+	"main": "server.js",
+	"type": "module",
 	"scripts": {
-		"start": "node index.js",
-		"dev": "nodemon index.js"
+		"start": "node server.js",
+		"dev": "nodemon server.js"
 	},
 	"repository": {
 		"type": "git",
